--- a/html/moon_bootz/contact.html
+++ b/html/moon_bootz/contact.html
@@ -3,12 +3,12 @@
 <head>
   <title>Contact Us</title>
 </head>
-  <h1> Contact Us Info </h1>
+<body>
+  <header> <a href="index.html">Back</a> </header>
+   <h1> Contact Us Info </h1>
     <p>We are located off the 101 exit. </p>
     <address>111 Market St.
       San Francisco, CA 94111
     </address>
-<body>
-
 </body>
 </html>
