--- a/html/moon_bootz/product_details.html
+++ b/html/moon_bootz/product_details.html
@@ -3,6 +3,9 @@
 <head>
   <title>Moon Bootz 3000</title>
 </head>
+
+<body>
+  <header> <a href="index.html">Back</a> </header>
   <h1>Moon Bootz 3000 Features</h1>
   <p>Here are some of the features of out best selling boots</p>
   <ul>
@@ -11,7 +14,6 @@
     <li>Comfy insoles</li>
     <li>Space ready</li>
   </ul>
-<body>
 
 </body>
 </html>
