Add skills and top 3 places

--- a/html/web_basics/index.html
+++ b/html/web_basics/index.html
@@ -5,6 +5,17 @@
   </head>
   <body>
     <h1> Diana Sandoval</h1>
-      <p> Product Manager and Software Engineer </p>
+      <p><em>Product Manager and Software Engineer</em></p>
+    <h2>Skills</h2>
+      <ul> <li>Product Management</li>
+      <li>Marketing</li>
+      <li>Engineering</li> </ul>
+    <h2>Top 3 places visited</h2>
+      <ol> <li>Patagonia</li>
+      <li>Mt. Kilimanjaro</li>
+      <li>Kenai Fjords</li></ol>
+    <p>Visit <a href="https://www.diasandoval.com">diasandoval.com<a> to learn more about me.</p>
   </body>
 </html>
+
+
