--- a/html/web_basics/index.html
+++ b/html/web_basics/index.html
@@ -14,7 +14,7 @@
       <ol> <li>Patagonia</li>
       <li>Mt. Kilimanjaro</li>
       <li>Kenai Fjords</li></ol>
-    <p>Visit <a href="https://www.diasandoval.com">diasandoval.com<a> to learn more about me.</p>
+    <p>Visit <a href="https://www.diasandoval.com">diasandoval.com</a> to learn more about me.</p>
   </body>
 </html>
 
