Second table added w/row and column span

--- a/html/table-practice.html
+++ b/html/table-practice.html
@@ -34,5 +34,31 @@
         <td>72</td>
       </tr>
     </table>
+
+    <table border="7">
+      <tr>
+        <th>Lions</th>
+        <th>Tigers</th>
+        <th>Bears</th>
+        <th>Zebra</th>
+        <th>Seals</th>
+      </tr>
+      <tr>
+        <td>11</td>
+        <td rowspan="2">22</td>
+        <td>33</td>
+        <td>1</td>
+        <td>12</td>
+      <tr>
+        <td>44</td>
+        <td>55</td>
+        <td>1</td>
+        <td>42</td>
+      </tr>
+      <tr>
+        <td colspan="3">165</td>
+        <td colspan="2">56</td>
+      </tr>
+    </table>
   </body>
 </html>
