--- a/html/gps/index.html
+++ b/html/gps/index.html
@@ -42,6 +42,20 @@
 
 <footer> Site made during GPS </footer>
 
-
   </body>
 </html>
+
+
+<!--GPS REFLECTION
+
+What is the purpose of HTML5 semantic tags? Which ones do you see as most useful?
+  HTML5 semantic tags make the page more readable and accessible to people with disabilities. The most useful are main, article, section, nav, aside, header, and footer.
+
+What is the order the browser uses to display elements on a page?
+  The browser displays elements from top to bottom.
+
+What did you learn about Sublime in this challenge? Do you think you'll create more handy snippets at a later date?
+  I learned how to make snippets on Sublime. Snippets can help speed things up and are very useful. Yes, I will create more snippets and download Emmet.
+
+What concept in this challenge was most difficult for you? How can you improve your understanding of this concept?
+  Initially, the most difficult was knowing how to arrange and order the semantic tags. My partner and guide were very helpful discussing how to best arrange the semantic tags.-->
