--- a/css/positioning/index.html
+++ b/css/positioning/index.html
@@ -5,8 +5,8 @@
     <link rel="stylesheet" href="octopus.css" type="text/css">
   </head>
   <body>
-    <img src="glasses.png" alt="octopus glasses">
-    <img src="octopus.png" alt="octopus smiling">
-    <img src="hat.png" alt="octupus hat">
+    <img id="glasses" src="glasses.png" alt="octopus glasses">
+    <img id="octopus" src="octopus.png" alt="octopus smiling">
+    <img id="hat" src="hat.png" alt="octupus hat">
   </body>
 </html>
