--- a/css/gps/gps2-1.html
+++ b/css/gps/gps2-1.html
@@ -1,8 +1,11 @@
 <!--
 Write your names here:
 1. Diana Sandoval
-2.
-We spent [#] hours on this challenge.
+2. Gabriela Alessio
+We spent 1 hour on this challenge.
+
+Reflection:
+Yes, I feel much more confident with CSS positioning after this pairing session. Overall, I am much more confident with CSS. A great takeaway from this session is to reference line # when pair programming and working with others.
 -->
 
 <!-- This challenge uses HTML5 syntax that may not be available in all browsers (It works in Chrome and Safari, from my testing. (<details> and<summary>). -->
